--- a/index.html
+++ b/index.html
@@ -13,7 +13,23 @@
     <div class="container mx-auto px-6 text-center">
       <h1 class="text-4xl font-bold mb-4">Routezilla: Smart Booking & Routing</h1>
       <p class="text-lg mb-6">Add a “Book Online” button to your Google Business Profile and automate bookings seamlessly.</p>
-      <a href="#plans" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">Get Lifetime Deal on AppSumo</a>
+      <div class="flex justify-center space-x-4">
+        <a href="#plans" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">Get Lifetime Deal</a>
+        <a href="#screenshots" class="text-blue-600 underline hover:text-blue-800">View Screenshots</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Screenshots -->
+  <section id="screenshots" class="py-16 bg-gray-100">
+    <div class="container mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold mb-8">Product Screenshots</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+        <img src="/assets/screenshots/dashboard.png" alt="Dashboard overview" class="rounded-lg shadow" />
+        <img src="/assets/screenshots/booking-button.png" alt="Google Book Online button" class="rounded-lg shadow" />
+        <img src="/assets/screenshots/route-map.png" alt="Route map optimization" class="rounded-lg shadow" />
+        <img src="/assets/screenshots/reminders.png" alt="SMS & email reminders" class="rounded-lg shadow" />
+      </div>
     </div>
   </section>
 
@@ -22,15 +38,19 @@
     <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
         <h3 class="text-xl font-semibold mb-2">1-Click Booking</h3>
-        <p>Embed a widget or use Google profile integration to let customers book instantly.</p>
+        <p>Embed a widget or add a button to your Google Business Profile for instant bookings.</p>
       </div>
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
         <h3 class="text-xl font-semibold mb-2">Automated Routing</h3>
-        <p>Optimize routes daily with geo-fencing and smart sequencing.</p>
+        <p>Optimize daily routes with geo‑fencing, traffic data, and smart sequencing.</p>
       </div>
       <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
         <h3 class="text-xl font-semibold mb-2">SMS & Email Alerts</h3>
-        <p>Reduce no-shows with confirmation and reminder messages.</p>
+        <p>Reduce no‑shows with automated confirmations and reminders.</p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold mb-2">Analytics Dashboard</h3>
+        <p>Track bookings, routes, and performance in a real‑time dashboard.</p>
       </div>
     </div>
   </section>
@@ -40,7 +60,7 @@
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold mb-8">Lifetime Deal Pricing</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div class="border p-6 rounded-lg">
+        <div class="border p-6 rounded-lg shadow">
           <h3 class="text-2xl font-semibold mb-4">Basic</h3>
           <p class="text-4xl font-bold mb-4">$49</p>
           <ul class="mb-6 text-left space-y-2">
@@ -50,19 +70,90 @@
           </ul>
           <button class="bg-green-600 text-white w-full py-3 rounded-lg hover:bg-green-700 transition">Get Basic</button>
         </div>
-        <div class="border p-6 rounded-lg">
+        <div class="border p-6 rounded-lg shadow">
           <h3 class="text-2xl font-semibold mb-4">Pro</h3>
           <p class="text-4xl font-bold mb-4">$79</p>
           <ul class="mb-6 text-left space-y-2">
-            <li>Unlimited monthly bookings</li>
+            <li>Unlimited bookings</li>
             <li>Route optimization</li>
             <li>Priority support</li>
           </ul>
           <button class="bg-blue-600 text-white w-full py-3 rounded-lg hover:bg-blue-700 transition">Get Pro</button>
         </div>
       </div>
+      <p class="mt-4 text-sm text-gray-500">30‑day money‑back guarantee. No setup fees.</p>
     </div>
   </section>
+
+  <!-- Badges & Guarantees -->
+  <section class="py-12 bg-gray-100">
+    <div class="container mx-auto px-6 flex flex-wrap justify-center items-center space-x-8">
+      <img src="/assets/badges/google-guaranteed.png" alt="Google Guaranteed badge" class="h-16" />
+      <img src="/assets/badges/ssl-secure.png" alt="SSL Secure" class="h-16" />
+      <img src="/assets/badges/money-back.png" alt="30-day money back" class="h-16" />
+    </div>
+  </section>
+
+  <!-- Testimonials -->
+  <section class="py-16">
+    <div class="container mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold mb-8">What Our Users Say</h2>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <blockquote class="bg-white p-6 rounded-lg shadow">
+          <p class="italic mb-4">“Routezilla cut our routing time in half and boosted bookings by 20%.”</p>
+          <cite class="font-semibold">— Alex, Plumbing Co.</cite>
+        </blockquote>
+        <blockquote class="bg-white p-6 rounded-lg shadow">
+          <p class="italic mb-4">“The booking button on our Google profile is a game changer.”</p>
+          <cite class="font-semibold">— Sara, Cleaning Pros</cite>
+        </blockquote>
+        <blockquote class="bg-white p-6 rounded-lg shadow">
+          <p class="italic mb-4">“Setup was effortless and support is top‑notch.”</p>
+          <cite class="font-semibold">— David, HVAC Services</cite>
+        </blockquote>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ -->
+  <section class="bg-white py-16">
+    <div class="container mx-auto px-6">
+      <h2 class="text-3xl font-bold text-center mb-8">Frequently Asked Questions</h2>
+      <div class="space-y-6 max-w-2xl mx-auto">
+        <div>
+          <h4 class="font-semibold">How do I connect my Google profile?</h4>
+          <p>Authenticate via OAuth, select the profile, and we add the booking button automatically.</p>
+        </div>
+        <div>
+          <h4 class="font-semibold">Can I upgrade later?</h4>
+          <p>Yes, easily switch plans anytime in your dashboard.</p>
+        </div>
+        <div>
+          <h4 class="font-semibold">Is there a setup fee?</h4>
+          <p>No—this lifetime deal includes full setup assistance at no extra cost.</p>
+        </div>
+        <div>
+          <h4 class="font-semibold">Do I need a website?</h4>
+          <p>No, you can use the standalone booking widget or integrate directly into Google Business Profile.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-100 py-8">
+    <div class="container mx-auto px-6 text-center text-sm text-gray-600">
+      <p>&copy; 2025 Routezilla. All rights reserved.</p>
+      <div class="mt-4 space-x-4">
+        <a href="#" class="hover:underline">Terms</a>
+        <a href="#" class="hover:underline">Privacy</a>
+      </div>
+    </div>
+  </footer>
+
+</body>
+</html>
+
 
   <!-- Testimonials -->
   <section class
