--- a/index.html
+++ b/index.html
@@ -3,138 +3,135 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Routezilla Lifetime Deal | Landing</title>
+  <title>Routezilla Lifetime Deal | AppSumo Style</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Simple countdown timer styling */
+    .timer { font-size: 1.25rem; font-weight: 600; }
+  </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
-
-  <!-- Hero -->
-  <section class="bg-white py-16">
-    <div class="container mx-auto px-6 text-center">
-      <h1 class="text-4xl font-bold mb-4">Routezilla: Smart Booking & Routing</h1>
-      <p class="text-lg mb-6">Add a “Book Online” button to your Google Business Profile and automate bookings seamlessly.</p>
-      <div class="flex justify-center space-x-4">
-        <a href="#plans" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700 transition">Get Lifetime Deal</a>
-        <a href="#screenshots" class="text-blue-600 underline hover:text-blue-800">View Screenshots</a>
+  <!-- AppSumo Header -->
+  <section class="bg-white py-8 border-b">
+    <div class="container mx-auto px-6 flex flex-col md:flex-row items-center justify-between">
+      <div class="flex items-center space-x-4">
+        <img src="https://appsumo.imgix.net/media/assets/routezilla-icon.png" alt="Routezilla logo" class="h-16" />
+        <div>
+          <h1 class="text-3xl font-bold">Routezilla</h1>
+          <div class="flex items-center space-x-2">
+            <span class="text-yellow-500">★★★★☆</span>
+            <span class="text-sm text-gray-600">4.7 (120 reviews)</span>
+          </div>
+        </div>
+      </div>
+      <div class="text-right">
+        <div class="text-sm text-gray-600">Original Price:</div>
+        <div class="text-lg line-through text-gray-400">$249</div>
+        <div class="text-3xl font-bold text-green-600">$49</div>
+        <div class="text-sm text-red-600 font-semibold">Save 80%</div>
+        <div class="timer text-gray-800 mt-2" id="countdown">Deal ends in: <span id="time">00:00:00</span></div>
+        <a href="#plans" class="mt-4 inline-block bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 transition">Get Lifetime Deal</a>
       </div>
     </div>
   </section>
 
-  <!-- Screenshots -->
-  <section id="screenshots" class="py-16 bg-gray-100">
-    <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8">Product Screenshots</h2>
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-        <img src="/assets/screenshots/dashboard.png" alt="Dashboard overview" class="rounded-lg shadow" />
-        <img src="/assets/screenshots/booking-button.png" alt="Google Book Online button" class="rounded-lg shadow" />
-        <img src="/assets/screenshots/route-map.png" alt="Route map optimization" class="rounded-lg shadow" />
-        <img src="/assets/screenshots/reminders.png" alt="SMS & email reminders" class="rounded-lg shadow" />
+  <!-- Screenshots Carousel -->
+  <section id="screenshots" class="py-12 bg-gray-100">
+    <div class="container mx-auto px-6">
+      <h2 class="text-2xl font-bold mb-4 text-center">Product Screenshots</h2>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <figure><img src="https://appsumo.imgix.net/media/assets/routezilla-screenshot1.png" alt="Dashboard overview" class="rounded-lg shadow" /><figcaption class="mt-2 text-sm text-center">Dashboard Overview</figcaption></figure>
+        <figure><img src="https://appsumo.imgix.net/media/assets/routezilla-screenshot2.png" alt="Booking button" class="rounded-lg shadow" /><figcaption class="mt-2 text-sm text-center">Google Book Button</figcaption></figure>
+        <figure><img src="https://appsumo.imgix.net/media/assets/routezilla-screenshot3.png" alt="Route map" class="rounded-lg shadow" /><figcaption class="mt-2 text-sm text-center">Route Map Optimization</figcaption></figure>
       </div>
     </div>
   </section>
 
   <!-- Features -->
   <section class="py-16">
-    <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-3 gap-8">
-      <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold mb-2">1-Click Booking</h3>
-        <p>Embed a widget or add a button to your Google Business Profile for instant bookings.</p>
+    <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="font-semibold mb-2">Book via Google</h3>
+        <p>Add a “Book Online” button directly to your Google Business Profile in 2 clicks.</p>
       </div>
-      <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold mb-2">Automated Routing</h3>
-        <p>Optimize daily routes with geo‑fencing, traffic data, and smart sequencing.</p>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="font-semibold mb-2">Automated Routing</h3>
+        <p>Smart routing with geo-fencing, traffic data, and dynamic rescheduling.</p>
       </div>
-      <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold mb-2">SMS & Email Alerts</h3>
-        <p>Reduce no‑shows with automated confirmations and reminders.</p>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="font-semibold mb-2">SMS & Email Alerts</h3>
+        <p>Send confirmations, reminders, and follow-ups automatically.</p>
       </div>
-      <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg transition">
-        <h3 class="text-xl font-semibold mb-2">Analytics Dashboard</h3>
-        <p>Track bookings, routes, and performance in a real‑time dashboard.</p>
+      <div class="bg-white p-6 rounded-lg shadow">
+        <h3 class="font-semibold mb-2">Real-time Analytics</h3>
+        <p>View live dashboards for bookings, routes, and performance metrics.</p>
       </div>
     </div>
   </section>
 
-  <!-- Pricing -->
+  <!-- Pricing & Guarantee -->
   <section id="plans" class="bg-white py-16">
     <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8">Lifetime Deal Pricing</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div class="border p-6 rounded-lg shadow">
-          <h3 class="text-2xl font-semibold mb-4">Basic</h3>
-          <p class="text-4xl font-bold mb-4">$49</p>
-          <ul class="mb-6 text-left space-y-2">
-            <li>Up to 5 bookings/month</li>
-            <li>Google Book Online button</li>
-            <li>Email & SMS reminders</li>
-          </ul>
-          <button class="bg-green-600 text-white w-full py-3 rounded-lg hover:bg-green-700 transition">Get Basic</button>
+      <h2 class="text-3xl font-bold mb-6">Lifetime Deal Pricing</h2>
+      <p class="mb-4 text-gray-600">Includes all future updates & priority support</p>
+      <div class="inline-block text-left bg-gray-50 border rounded-lg shadow p-6">
+        <div class="flex items-baseline space-x-2 justify-center">
+          <div class="text-2xl line-through text-gray-400">$249</div>
+          <div class="text-4xl font-bold text-green-600">$49</div>
         </div>
-        <div class="border p-6 rounded-lg shadow">
-          <h3 class="text-2xl font-semibold mb-4">Pro</h3>
-          <p class="text-4xl font-bold mb-4">$79</p>
-          <ul class="mb-6 text-left space-y-2">
-            <li>Unlimited bookings</li>
-            <li>Route optimization</li>
-            <li>Priority support</li>
-          </ul>
-          <button class="bg-blue-600 text-white w-full py-3 rounded-lg hover:bg-blue-700 transition">Get Pro</button>
-        </div>
+        <div class="text-sm text-red-600 font-semibold mt-1">Save 80%</div>
+        <ul class="mt-4 text-left space-y-1">
+          <li>✅ Unlimited bookings via Google button</li>
+          <li>✅ Automated route optimization</li>
+          <li>✅ SMS & email notifications</li>
+          <li>✅ Real-time analytics dashboard</li>
+          <li>✅ 30-day money-back guarantee</li>
+        </ul>
+        <a href="#" class="mt-6 block bg-blue-600 text-white px-6 py-3 rounded-lg hover:bg-blue-700 transition">Buy on AppSumo</a>
       </div>
-      <p class="mt-4 text-sm text-gray-500">30‑day money‑back guarantee. No setup fees.</p>
-    </div>
-  </section>
-
-  <!-- Badges & Guarantees -->
-  <section class="py-12 bg-gray-100">
-    <div class="container mx-auto px-6 flex flex-wrap justify-center items-center space-x-8">
-      <img src="/assets/badges/google-guaranteed.png" alt="Google Guaranteed badge" class="h-16" />
-      <img src="/assets/badges/ssl-secure.png" alt="SSL Secure" class="h-16" />
-      <img src="/assets/badges/money-back.png" alt="30-day money back" class="h-16" />
     </div>
   </section>
 
   <!-- Testimonials -->
-  <section class="py-16">
+  <section class="py-16 bg-gray-100">
     <div class="container mx-auto px-6 text-center">
-      <h2 class="text-3xl font-bold mb-8">What Our Users Say</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <blockquote class="bg-white p-6 rounded-lg shadow">
-          <p class="italic mb-4">“Routezilla cut our routing time in half and boosted bookings by 20%.”</p>
-          <cite class="font-semibold">— Alex, Plumbing Co.</cite>
-        </blockquote>
-        <blockquote class="bg-white p-6 rounded-lg shadow">
-          <p class="italic mb-4">“The booking button on our Google profile is a game changer.”</p>
-          <cite class="font-semibold">— Sara, Cleaning Pros</cite>
-        </blockquote>
-        <blockquote class="bg-white p-6 rounded-lg shadow">
-          <p class="italic mb-4">“Setup was effortless and support is top‑notch.”</p>
-          <cite class="font-semibold">— David, HVAC Services</cite>
-        </blockquote>
+      <h2 class="text-2xl font-bold mb-6">What People Are Saying</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        <div class="bg-white p-6 rounded-lg shadow text-left">
+          <div class="flex items-center mb-2"><img src="https://appsumo.imgix.net/media/assets/avatar1.jpg" class="h-12 w-12 rounded-full mr-3" alt="User avatar"><span class="text-yellow-500">★★★★★</span></div>
+          <p class="italic mb-2">“Routezilla saved us hours every week and boosted client satisfaction!”</p>
+          <cite class="font-semibold">— Alex B., Plumbing Co.</cite>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow text-left">
+          <div class="flex items-center mb-2"><img src="https://appsumo.imgix.net/media/assets/avatar2.jpg" class="h-12 w-12 rounded-full mr-3" alt="User avatar"><span class="text-yellow-500">★★★★☆</span></div>
+          <p class="italic mb-2">“Super easy setup and the Google integration is fantastic.”</p>
+          <cite class="font-semibold">— Sara L., Cleaning Pros</cite>
+        </div>
+        <div class="bg-white p-6 rounded-lg shadow text-left">
+          <div class="flex items-center mb-2"><img src="https://appsumo.imgix.net/media/assets/avatar3.jpg" class="h-12 w-12 rounded-full mr-3" alt="User avatar"><span class="text-yellow-500">★★★★★</span></div>
+          <p class="italic mb-2">“Incredible support and continuous updates. Highly recommend!”</p>
+          <cite class="font-semibold">— David M., HVAC Experts</cite>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- FAQ -->
   <section class="bg-white py-16">
-    <div class="container mx-auto px-6">
-      <h2 class="text-3xl font-bold text-center mb-8">Frequently Asked Questions</h2>
-      <div class="space-y-6 max-w-2xl mx-auto">
+    <div class="container mx-auto px-6 max-w-2xl">
+      <h2 class="text-2xl font-bold mb-4 text-center">Frequently Asked Questions</h2>
+      <div class="space-y-6">
         <div>
-          <h4 class="font-semibold">How do I connect my Google profile?</h4>
-          <p>Authenticate via OAuth, select the profile, and we add the booking button automatically.</p>
+          <h4 class="font-semibold">Does this work with multiple Google profiles?</h4>
+          <p>Yes, you can connect multiple GBP locations and manage them from one dashboard.</p>
         </div>
         <div>
-          <h4 class="font-semibold">Can I upgrade later?</h4>
-          <p>Yes, easily switch plans anytime in your dashboard.</p>
+          <h4 class="font-semibold">Can I transfer my deal?</h4>
+          <p>AppSumo deals are transferable; please follow their transfer process in your account.</p>
         </div>
         <div>
-          <h4 class="font-semibold">Is there a setup fee?</h4>
-          <p>No—this lifetime deal includes full setup assistance at no extra cost.</p>
-        </div>
-        <div>
-          <h4 class="font-semibold">Do I need a website?</h4>
-          <p>No, you can use the standalone booking widget or integrate directly into Google Business Profile.</p>
+          <h4 class="font-semibold">What if I don’t like it?</h4>
+          <p>Enjoy a full 30-day money-back guarantee, no questions asked.</p>
         </div>
       </div>
     </div>
@@ -151,9 +148,20 @@
     </div>
   </footer>
 
+  <!-- Countdown Script -->
+  <script>
+    const endTime = new Date(new Date().getTime() + 2 * 24 * 60 * 60 * 1000); // 48 hours from now
+    function updateTimer() {
+      const now = new Date();
+      const diff = endTime - now;
+      if (diff <= 0) return document.getElementById('time').textContent = '00:00:00';
+      const hrs = String(Math.floor(diff / (1000*60*60))).padStart(2,'0');
+      const mins = String(Math.floor((diff % (1000*60*60))/(1000*60))).padStart(2,'0');
+      const secs = String(Math.floor((diff % (1000*60))/(1000))).padStart(2,'0');
+      document.getElementById('time').textContent = `${hrs}:${mins}:${secs}`;
+    }
+    setInterval(updateTimer, 1000);
+    updateTimer();
+  </script>
 </body>
 </html>
-
-
-  <!-- Testimonials -->
-  <section class
